# JZ-Discord-Bot-2024

./: Cargo.toml  README.md
src/: main.rs
src/discord/: mod.rs
src/utils/: mod.rs  models.rs  next_time_slot.rs  program.rs
