[package]
name = "JZ-Discord-Bot-2024"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
dotenv = "0.15.0"
poise = "0.6.1"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
serenity = "0.12.2"
tokio = { version = "1.39.1", features = ["full"] }
